Bug 15896 - libquic build fixes
Summary: libquic build fixes
Status: RESOLVED FIXED
Alias: None
Product: Samba 4.1 and newer
Classification: Unclassified
Component: Build (show other bugs)
Version: 4.23.0rc1
Hardware: All All
: P5 normal (vote)
Target Milestone: ---
Assignee: Jule Anger
QA Contact: Samba QA Contact
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-08-20 13:43 UTC by Björn Baumbach
Modified: 2025-08-22 15:47 UTC (History)
1 user (show)

See Also:


Attachments
fix for 4.23 (2.14 KB, patch)
2025-08-21 07:50 UTC, Björn Baumbach
bbaumbach: review+
metze: review-
Details
fix for 4.23 with additional build fixes (5.98 KB, patch)
2025-08-21 08:46 UTC, Björn Baumbach
bbaumbach: review+
metze: review+
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Björn Baumbach 2025-08-20 13:43:02 UTC
TLS_CIPHER_AES_GCM_256 or TLS_CIPHER_AES_CCM_128 might be undefined. configure defined are unused.

Have patch, need bug number.
Comment 1 Björn Baumbach 2025-08-20 13:45:00 UTC
Affects 4.23, which is currently not selectable in bugzilla at the moment.
Comment 2 Samba QA Contact 2025-08-20 15:05:03 UTC
This bug was referenced in samba master:

149933854f39b4628b14abc5dcd57e73e2a0a637
Comment 3 Björn Baumbach 2025-08-21 07:50:57 UTC
Created attachment 18691 [details]
fix for 4.23
Comment 4 Stefan Metzmacher 2025-08-21 07:54:39 UTC
Comment on attachment 18691 [details]
fix for 4.23

Can you please also include the clang fixes 26065e1f1ee111f5ddfb64782638492af65aeb95 and de7932ea8d12348208f50f7b050b826d236ea597?
Comment 5 Björn Baumbach 2025-08-21 08:46:50 UTC
Created attachment 18692 [details]
fix for 4.23 with additional build fixes
Comment 6 Jule Anger 2025-08-21 09:21:12 UTC
Pushed to autobuild-v4-23-test.
Comment 7 Samba QA Contact 2025-08-22 13:12:20 UTC
This bug was referenced in samba v4-23-test:

d43c632b632991afc04871e8d68943e1f4ff7471
e69828e8de5dd68f0e3694430bd7893b0cf672fb
93cb60fe64258e739c9c517672b6725df86e7993
Comment 8 Jule Anger 2025-08-22 15:13:58 UTC
Closing out bug report.

Thanks!
Comment 9 Samba QA Contact 2025-08-22 15:47:05 UTC
This bug was referenced in samba v4-23-stable (Release samba-4.23.0rc2):

d43c632b632991afc04871e8d68943e1f4ff7471
e69828e8de5dd68f0e3694430bd7893b0cf672fb
93cb60fe64258e739c9c517672b6725df86e7993