third_party/quic/libquic_handshake_wrapper.c
@@ -1,0 +1,2 @@
+#include "replace.h"
+#include "libquic/handshake.c"
